--- a/src/App.css
+++ b/src/App.css
@@ -36,3 +36,12 @@
     transform: rotate(360deg);
   }
 }
+.App input {
+  margin-top: 20px;
+  width: 200px;
+  height: 40px;
+  font-size: 20px;
+  padding-left: 10px;
+  border-top-right-radius: 0.25rem;
+  border-top-left-radius: 0.25rem;
+}
